--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -2,6 +2,31 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: "Baloo2 Regular";
+  src: url("@/assets/fonts/Baloo2-Regular.ttf") format(truetype);
+}
+
+@font-face {
+  font-family: "Baloo2 Medium";
+  src: url("@/assets/fonts/Baloo2-Medium.ttf") format(truetype);
+}
+
+@font-face {
+  font-family: "Baloo2 Bold";
+  src: url("@/assets/fonts/Baloo2-Bold.ttf") format(truetype);
+}
+
+@font-face {
+  font-family: "Baloo2 SemiBold";
+  src: url("@/assets/fonts/Baloo2-SemiBold.ttf") format(truetype);
+}
+
+@font-face {
+  font-family: "Baloo2 ExtraBold";
+  src: url("@/assets/fonts/Baloo2-ExtraBold.ttf") format(truetype);
+}
+
 *,
 *::before,
 *::after {
@@ -13,14 +38,4 @@
 
 body {
   min-height: 100vh;
-  color: var(--color-text);
-  background: var(--color-background);
-  transition: color 0.5s, background-color 0.5s;
-  line-height: 1.6;
-  font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
-    Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-  font-size: 15px;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
